--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "start-local": "react-scripts start --host=0.0.0.0",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
