--- a/package.json
+++ b/package.json
@@ -42,8 +42,9 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.5",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.24"
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "postcss-import": "^14.1.0",
+    "tailwindcss": "^3.1.4"
   }
 }
